--- a/views/forms/article.ejs
+++ b/views/forms/article.ejs
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Nouvel article</title>
-    <link rel="stylesheet" href="/css/Bootstrap-4/css/bootstrap.css">
+    <link rel="stylesheet" href="/Bootstrap-4/css/bootstrap.css">
+    <script type="text/javascript" src="/Bootstrap-4/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/Bootstrap-4/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/components/navbar.css">
   </head>
   <body>
+    <% include ../shared/navbar %>
     <div class="container">
-      <form>
+      <form action="/new_article">
         <div class="form-group">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect1">Example select</label>
-          <select class="form-control" id="exampleFormControlSelect1">
+          <label for="exampleFormControlSelect1">Pays</label>
+          <select class="form-control" id="exampleFormControlSelect1" name="country">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -23,8 +23,8 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect2">Example multiple select</label>
-          <select multiple class="form-control" id="exampleFormControlSelect2">
+          <label for="exampleFormControlSelect1">Source</label>
+          <select class="form-control" id="exampleFormControlSelect1" name="source">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -33,9 +33,38 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Example textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="exampleFormControlInput1">Numéro</label>
+          <input type="number" name="title" class="form-control" id="exampleFormControlInput1" placeholder="1400">
         </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Date</label>
+          <p><input type="text" name="day" class="form-control" id="exampleFormControlInput1" placeholder="JJ">/
+            <select class="form-control" id="exampleFormControlSelect1" name="source">
+              <option value="01">Janvier</option>
+              <option value="02">Février</option>
+              <option value="03">Mars</option>
+              <option value="04">Avril</option>
+              <option value="05">Mai</option>
+              <option value="06">Juin</option>
+              <option value="07">Juillet</option>
+              <option value="08">Août</option>
+              <option value="09">Septembre</option>
+              <option value="10">Octobre</option>
+              <option value="11">Novembre</option>
+              <option value="12">Décembre</option>
+            </select>/
+            <input type="text" name="year" class="form-control" id="exampleFormControlInput1" placeholder="AAAA"></p>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Titre</label>
+          <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Titre de l'article">
+        </div>
+
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Contenu</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="15" name="content" placeholder="Contenu de l'article"></textarea>
+        </div>
+        <button type="submit" name="button" class="btn btn-primary">Créer l'article</button>
       </form>
     </div>
   </body>
