WIP models & form

--- a/views/forms/article.ejs
+++ b/views/forms/article.ejs
@@ -11,7 +11,7 @@
   <body>
     <% include ../shared/navbar %>
     <div class="container">
-      <form action="/new_article">
+      <form action="/new_article" method="post">
         <div class="form-group">
           <label for="exampleFormControlSelect1">Pays</label>
           <select class="form-control" id="exampleFormControlSelect1" name="country">
