--- a/views/forms/country.ejs
+++ b/views/forms/country.ejs
@@ -14,39 +14,39 @@
       <form action="/new_country" method="post">
         <div class="form-group">
           <label for="exampleFormControlInput1">Nom</label>
-          <input type="text" name="nom" class="form-control" id="exampleFormControlInput1" placeholder="Pays">
+          <input type="text" name="nom" class="form-control" placeholder="Pays">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">URL</label>
-          <input type="text" name="url" class="form-control" id="exampleFormControlInput1" placeholder="URL pays">
+          <input type="text" name="url" class="form-control" placeholder="URL pays">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Capitale</label>
-          <input type="text" name="capitale" class="form-control" id="exampleFormControlInput1" placeholder="Capitale">
+          <input type="text" name="capitale" class="form-control" placeholder="Capitale">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Superficie</label>
-          <input type="number" name="superficie" class="form-control" id="exampleFormControlInput1" placeholder="Superficie">
+          <input type="number" name="superficie" class="form-control" placeholder="Superficie">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Population</label>
-          <input type="number" step="0.1" name="population" class="form-control" id="exampleFormControlInput1" placeholder="Population">
+          <input type="number" step="0.1" name="population" class="form-control" placeholder="Population">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">Langue</label>
-          <input type="text" name="langue" class="form-control" id="exampleFormControlInput1" placeholder="Langue">
+          <input type="text" name="langue" class="form-control" placeholder="Langue">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">PNB</label>
-          <input type="number" name="pnb" class="form-control" id="exampleFormControlInput1" placeholder="PNB">
+          <input type="number" name="pnb" class="form-control" placeholder="PNB">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">PNB par habitant</label>
-          <input type="number" name="pnbhab" class="form-control" id="exampleFormControlInput1" placeholder="PNB/hab.">
+          <input type="number" name="pnbhab" class="form-control" placeholder="PNB/hab.">
         </div>
         <div class="form-group">
           <label for="exampleFormControlInput1">IDH</label>
-          <input type="number" step="0.001" name="idh" class="form-control" id="exampleFormControlInput1" placeholder="IDH">
+          <input type="number" step="0.001" name="idh" class="form-control" placeholder="IDH">
         </div>
         <button type="submit" name="button" class="btn btn-primary">Créer pays</button>
       </form>
