--- a/views/forms/article.ejs
+++ b/views/forms/article.ejs
@@ -15,11 +15,9 @@
         <div class="form-group">
           <label for="exampleFormControlSelect1">Pays</label>
           <select class="form-control" id="exampleFormControlSelect1" name="country">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
+            <% countries.forEach((country) => { %>
+              <option value="<%= country._id %>"><%= country.nom %></option>
+            <% }); %>
           </select>
         </div>
         <div class="form-group">
