--- a/views/shared/navbar.ejs
+++ b/views/shared/navbar.ejs
@@ -19,6 +19,7 @@
           <li><a href="#">Profil</a></li>
           <li><a href="/new_country">Ajouter un pays</a></li>
           <li><a href="/new_article">Ajouter un article</a></li>
+          <li><a href="/new_source">Ajouter une source</a></li>
           <li><a href="#">Deconnexion</a></li>
         </ul>
       </div>
